# chess_engine

./: .gitignore  LICENSE  README.md
chess_engine/: Cargo.toml
chess_engine/src/: engine.rs  lib_py.rs
chess_engine/src/bindings_py/: pyboard.rs  pycolor.rs  pypiece.rs
chess_engine/src/engine/: piece.rs
chess_engine_core/: Cargo.toml
chess_engine_core/src/: engine.rs  lib.rs
chess_engine_core/src/engine/: board.rs  castling.rs  color.rs  move.rs  piece.rs
chess_engine_core/src/engine/piece_logic/: bishop.rs  king.rs  knight.rs  pawn.rs  piece_logic.rs  queen.rs  rook.rs
chess_engine_core/tests/: apply_moves.rs  legal_moves.rs  pseudo_legal.rs
chess_engine_python_bindings/: Cargo.toml
chess_engine_python_bindings/src/: bindings.rs  lib.rs
chess_engine_python_bindings/src/bindings/: pyboard.rs  pycolor.rs  pymove.rs  pypiece.rs
chess_engine_wasm_bindings/: Cargo.toml
chess_engine_wasm_bindings/src/: lib.rs
